# 8bitdo-kbd-mapper

./: .gitignore  50-8bitdo-108-key-kdb.rules  50-8bitdo-kdb.rules  8bdkbd.py  README.md  keys.py  protocol.txt  pyproject.toml  utils.py
src/eightbdkbd/: __init__.py  __main__.py  cli.py  client.py  consts.py  eightbdkdb.py  keys.py  utils.py
tests/: __init__.py  tests.py
