[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "8bdkbd"
version = "0.2"
dependencies = [
    "pyusb"
]
authors = [
    {name="Gonçalo Ribeiro"},
]
description = "Key mapper for 8BitDo's Retro Mechanical Keyboard"
readme = "README.md"

[project.scripts]
8bdkbd = "eightbdkbd.cli:main"
