[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "8bdkbd"
dynamic = ["version"]
dependencies = [
    "pyusb"
]
authors = [
    {name="Gonçalo Ribeiro"},
]
description = "Key mapper for 8BitDo's Retro Mechanical Keyboard"
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}  # to display in `pip show`
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)"
]

[project.urls]
Homepage = "https://github.com/goncalor/8bitdo-kbd-mapper/"
Repository = "https://github.com/goncalor/8bitdo-kbd-mapper.git"

[project.scripts]
8bdkbd = "eightbdkbd.cli:main"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
#local_scheme = "dirty-tag"  # no-local-version
fallback_version = "0.0.0"
